--- a/src/main/resources/templates/fragments/home-page/certificates.html
+++ b/src/main/resources/templates/fragments/home-page/certificates.html
@@ -8,7 +8,7 @@
 <div th:fragment="certificates" class="max-w-4xl mx-auto">
     <div class="text-center mb-12">
         <span class="badge mb-4">Credentials</span>
-        <h2 class="section-title">Education & Certificates</h2>
+        <h2 id="certificates-heading" class="section-title">Education & Certificates</h2>
         <p class="section-description">
             Academic foundation and professional certifications that back up my expertise.
         </p>
