--- a/src/main/resources/templates/fragments/home-page/hobbies.html
+++ b/src/main/resources/templates/fragments/home-page/hobbies.html
@@ -8,7 +8,7 @@
 <div th:fragment="hobbies" class="max-w-4xl mx-auto">
     <div class="text-center mb-12">
         <span class="badge mb-4">Beyond The Code</span>
-        <h2 class="section-title">Life Outside Work</h2>
+        <h2 id="hobbies-heading" class="section-title">Life Outside Work</h2>
         <p class="section-description">
             When I'm not pushing commits, here's what keeps me busy.
         </p>
@@ -27,6 +27,7 @@
                 <img th:src="@{/images/self_chess.png}" 
                      alt="Playing chess"
                      class="photo-slide"
+                     loading="lazy"
                      x-show="active === 0"
                      x-transition.opacity.duration.300ms
                      x-cloak
@@ -34,6 +35,7 @@
                 <img th:src="@{/images/self_cat.png}" 
                      alt="With my cat"
                      class="photo-slide"
+                     loading="lazy"
                      x-show="active === 1"
                      x-transition.opacity.duration.300ms
                      x-cloak
@@ -41,6 +43,7 @@
                 <img th:src="@{/images/self_pieter.png}" 
                      alt="With colleague Pieter"
                      class="photo-slide"
+                     loading="lazy"
                      x-show="active === 2"
                      x-transition.opacity.duration.300ms
                      x-cloak
@@ -48,6 +51,7 @@
                 <img th:src="@{/images/self_beach.png}" 
                      alt="At the beach"
                      class="photo-slide"
+                     loading="lazy"
                      x-show="active === 3"
                      x-transition.opacity.duration.300ms
                      x-cloak
