feat: show Docker build date and last commit date in About modal
Add image version (build date) and last update (commit date) badges
to the About This Website modal using Spring Boot BuildProperties
and git-commit-id-maven-plugin GitProperties.

--- a/src/main/resources/templates/fragments/home-page/hero.html
+++ b/src/main/resources/templates/fragments/home-page/hero.html
@@ -164,6 +164,8 @@
                     <div class="flex flex-wrap gap-2">
                         <span class="badge" th:text="'Java ' + ${details.currentJavaVersion()}"></span>
                         <span class="badge" th:text="'Spring Boot ' + ${details.currentSpringBootVersion()}"></span>
+                        <span class="badge" th:text="'Built ' + ${details.imageVersion()}"></span>
+                        <span class="badge" th:text="'Last update ' + ${details.lastUpdated()}"></span>
                     </div>
                 </div>
 
