--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" th:lang="${#locale.language}">
 
 <head>
-    <div th:replace="~{fragments/general/header :: header}"></div>
+    <th:block th:replace="~{fragments/general/header :: header}"></th:block>
     <style>
         [x-cloak] { display: none !important; }
     </style>
@@ -41,7 +41,6 @@
     </button>
 
     <script src="https://kit.fontawesome.com/b73a5b4c7a.js" crossorigin="anonymous"></script>
-    <script th:src="@{/webjars/htmx.org/2.0.8/dist/htmx.min.js}" defer></script>
     <script th:src="@{/enhancements.js}" defer></script>
     <script th:src="@{/webjars/alpinejs/3.15.8/dist/cdn.min.js}" defer></script>
 </body>
