--- a/src/main/resources/templates/fragments/general/header.html
+++ b/src/main/resources/templates/fragments/general/header.html
@@ -27,7 +27,7 @@
     <meta name="twitter:image:alt" th:attr="content=#{seo.og.image.alt}" content="Phi Tiet - Senior Software Engineer">
     
     <meta name="theme-color" content="#2dd4bf">
-    <meta name="color-scheme" content="dark">
+    <meta name="color-scheme" content="dark light">
     
     <link rel="canonical" href="https://phitiet.nl">
 
